policies/patches/topologyspreadconstraints-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: topologyspreadconstraints-policy
  annotations:
    policies.kyverno.io/description: >-
      Deployments to a Kubernetes cluster with multiple availability zones often need to
      distribute those replicas to align with those zones to ensure site-level failures
      do not impact availability. This policy ensures topologySpreadConstraints are defined,
      to spread pods over nodes and zones. Deployments or Statefulsets with less than 2
      replicas are skipped.
spec:
  rules:
    - name: spread-pods
      match:
        any:
          - resources:
              kinds:
                - Deployment
                - StatefulSet
                - Rollout
              operations:
              - CREATE
              - UPDATE
      celPreconditions:
        - name: "replicas-must-be-2-or-more"
          expression: "object.spec.replicas >= 2"
      validate:
        cel:
          expressions:
            - expression: >-
                size(object.spec.template.spec.?topologySpreadConstraints.orValue([]).filter(t, t.topologyKey == 'kubernetes.io/hostname' || t.topologyKey == 'topology.kubernetes.io/zone')) == 2
              message: "topologySpreadConstraint for kubernetes.io/hostname & topology.kubernetes.io/zone are required"
